Fri Mar 31 17:43:25 BST 2006  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Include --help and --version in --help output.
	* bin/quartzdump.cc: Add --help and --version options.  Terminate list
	  of long options so that "quartzdump --foo" no longer segfaults.

Fri Mar 31 17:27:09 BST 2006  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Tweak --help and --version output for
	  consistency with other binaries.  Terminate list of long options so
	  that "quartzcompact --foo" no longer segfaults.

Fri Mar 31 16:47:02 BST 2006  Olly Betts <olly@survex.com>

	* bin/omtcpsrv.cc: Make OPT_HELP and OPT_VERSION positive numbers.
	  Only give synopsis line for --help, not for syntax error.
	* bin/xapian-compact.cc: List --help and --version in --help output.
	  Terminate list of long options so that "xapian-compact --foo" no
	  longer segfaults.

Fri Mar 31 16:20:24 BST 2006  Olly Betts <olly@survex.com>

	* bin/omtcpsrv.cc: Added --help and --version options.

Thu Mar 30 11:51:21 BST 2006  Philip Neustrom

	* docs/remote_protocol.html: Document messages for requesting and
	  sending a termlist and a document.

Wed Mar 29 19:39:05 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_termlist.cc,backends/quartz/quartz_termlist.cc:
	  Add missing spaces in debug output.

Fri Mar 17 09:22:54 GMT 2006  Olly Betts <olly@survex.com>

	* api/vectortermlist.h,backends/net/net_termlist.cc,
	  backends/net/net_termlist.h,common/alltermslist.h,common/termlist.h,
	  matcher/branchtermlist.h: Make TermList::positionlist_begin() pure
	  virtual and put dummy implementations in BranchTermList and other
	  subclasses which can't (or don't) implement it.  This makes it
	  hard to accidentally fail to implement it in a backend's TermList
	  subclass.
	* backends/net/net_termlist.h: positionlist_begin() now throws
	  UnimplementedError instead of InvalidOperationError.

Fri Mar 17 08:46:52 GMT 2006  Olly Betts <olly@survex.com>
